--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-HARISHA AMEEN
+  <div class="container">
+              <div class="sidebar"></div>
+              <div class="content"></div>
+   </div>
 </html>
